# EXP-503

./: .gitignore  CLAUDE.md  CMakeLists.txt  DETAIL.md  README.md
.claude/: settings.local.json
assets/: placeholder_logo.txt
source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
